content updates and webkit browser owl carousel background fixed position flicker fix

--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -1348,6 +1348,7 @@ i.fa-1x{
 }
 .image-bg.fixed{
 	background-attachment: fixed;
+	-webkit-transform-style: preserve-3d;
 }
 .image-bg.content-in{
 	background-repeat: no-repeat;
